Add Evolution API

--- a/.env
+++ b/.env
@@ -18,3 +18,6 @@ WEBHOOK_URL=https://woodcock-coherent-deadly.ngrok-free.app
 
 # n8n binary data mode
 N8N_DEFAULT_BINARY_DATA_MODE=filesystem
+
+# Evolution API
+EVOLUTION_API_KEY=super-secret-key
