--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -113,6 +113,21 @@ services:
     volumes:
       - qdrant_storage:/qdrant/storage
 
+  evolution-api:
+    image: atendai/evolution-api:latest
+    container_name: evolution_api
+    networks: ['demo']
+    restart: unless-stopped
+    ports:
+      - 8080:8080
+    environment:
+      - AUTHENTICATION_API_KEY=${EVOLUTION_API_KEY}
+      - DATABASE_PROVIDER=postgresql
+      - DATABASE_CONNECTION_URI=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}?schema=evolution
+    depends_on:
+      postgres:
+        condition: service_healthy
+
   ollama-cpu:
     profiles: ["cpu"]
     <<: *service-ollama
